rewrite to js & add mongodb and proper generation

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,34 @@
-node_modules
+node_modules# Logs
+logs
+*.log
+npm-debug.log*
+
+# Dependencies
+node_modules/
+
+# Coverage
+coverage
+
+# Transpiled files
+lib/
+
+# VS Code
+.vscode
+!.vscode/tasks.js
+
+# JetBrains IDEs
+.idea/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Misc
+.DS_Store
+
+database
+
+timetables.json
+timetables1.json
